# app-for-spliting-a-0

./: README.md  requirement.txt  requirements.txt  splitapp.db
Backend/: .env  auth.py  database.py  main.py  models.py  schemas.py  todo.db
Frontend/: forgot_password.html  index.html  items.html  login.html  register.html  script.js  style.css
backend/: README.md  pyproject.toml  requirements.txt  test.py
backend/app/: .env  auth.py  config.py  crud.py  db.py  debt.py  main.py  models.py  schemas.py  utils.py
client/: balances.html  expenses.html  group.html  groups.html  index.html  login.html  register.html  test.html
client/js/: Balances.js  auth.js  config.js  expense.js  group.js  index.js  login.js  navbar.js  script.js  stats.js
client/partials/: navbar.html
clinet2/: group.html  index.html  login.html  register.html
clinet2/js/: api.js  auth.js  main.js  navbar.js  ui.js
clinet2/partials/: navbar.html
